--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
 		"@types/react-dom": "^17.0.0",
 		"@types/styled-components": "^5.1.10",
 		"firebase": "^8.6.8",
-		"node-sass": "^5.0.0",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"react-router-dom": "^5.2.0",
 		"react-scripts": "4.0.3",
+		"sass": "^1.48.0",
 		"styled-components": "^5.3.0",
 		"typescript": "^4.1.2",
 		"web-vitals": "^1.0.1"
@@ -29,20 +29,20 @@
 	},
 	"eslintConfig": {
 		"extends": [
-		"react-app",
-		"react-app/jest"
+			"react-app",
+			"react-app/jest"
 		]
 	},
 	"browserslist": {
 		"production": [
-		">0.2%",
-		"not dead",
-		"not op_mini all"
+			">0.2%",
+			"not dead",
+			"not op_mini all"
 		],
 		"development": [
-		"last 1 chrome version",
-		"last 1 firefox version",
-		"last 1 safari version"
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
 		]
 	},
 	"devDependencies": {
