--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
 		"@types/react": "^17.0.0",
 		"@types/react-dom": "^17.0.0",
 		"@types/styled-components": "^5.1.10",
+		"ansi-html": "^0.0.9",
+		"ejs": "^3.1.8",
 		"firebase": "^8.6.8",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"react-router-dom": "^5.2.0",
 		"react-scripts": "4.0.3",
 		"sass": "^1.48.0",
+		"shell-quote": "^1.7.3",
 		"styled-components": "^5.3.0",
 		"typescript": "^4.1.2",
 		"web-vitals": "^1.0.1"
