--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"ansi-html": "^0.0.9",
 		"ejs": "^3.1.8",
 		"firebase": "^8.6.8",
+		"node-forge": "^1.3.1",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"react-router-dom": "^5.2.0",
