--- a/package.json
+++ b/package.json
@@ -4,26 +4,27 @@
 	"private": true,
 	"dependencies": {
 		"@testing-library/jest-dom": "^5.11.4",
-		"@testing-library/react": "^11.1.0",
+		"@testing-library/react": "^13.3.0",
 		"@testing-library/user-event": "^12.1.10",
-		"@types/jest": "^26.0.15",
-		"@types/node": "^12.0.0",
-		"@types/react": "^17.0.0",
-		"@types/react-dom": "^17.0.0",
+		"@types/jest": "^28.1.4",
+		"@types/node": "^18.0.1",
+		"@types/react": "^18.0.14",
+		"@types/react-dom": "^18.0.5",
 		"@types/styled-components": "^5.1.10",
 		"ansi-html": "^0.0.9",
 		"ejs": "^3.1.8",
-		"firebase": "^8.6.8",
+		"firebase": "^9.8.4",
+		"immer": "^9.0.15",
 		"node-forge": "^1.3.1",
-		"react": "^17.0.2",
-		"react-dom": "^17.0.2",
-		"react-router-dom": "^5.2.0",
-		"react-scripts": "4.0.3",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"react-router-dom": "^6.3.0",
+		"react-scripts": "^5.0.1",
 		"sass": "^1.48.0",
 		"shell-quote": "^1.7.3",
 		"styled-components": "^5.3.0",
 		"typescript": "^4.1.2",
-		"web-vitals": "^1.0.1"
+		"web-vitals": "^2.1.4"
 	},
 	"scripts": {
 		"start": "react-scripts start",
