--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"firebase": "^9.8.4",
 		"immer": "^9.0.15",
 		"node-forge": "^1.3.1",
+		"nth-check": "^2.1.1",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-router-dom": "^6.3.0",
